--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,29 @@
-
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
-    font-family: 'Poppins', sans-serif;   
+    font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
     scroll-margin-top: 50px;
 }
 
-a:hover{
+a:hover {
     opacity: 0.7;
     color: #EF8910;
 }
 
-
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
     opacity: 10%;
     width: 15px
 }
-body::-webkit-scrollbar-thumb{
-    background-color:#3A3A3A;
+
+body::-webkit-scrollbar-thumb {
+    background-color: #3A3A3A;
     /* border-radius: 5px; */
     /* opacity: 10%; */
 }
+
+
 /* body::-webkit-scrollbar-track{
     background-color: #EF8910;
 } */
@@ -32,60 +33,45 @@ header {
 }
 
 .active {
-    border-bottom: 2px solid  #EF8910;
+    border-bottom: 2px solid #EF8910;
     border-radius: 2px;
     outline: none;
 }
 
-.nav-list li{
+.nav-list li {
     display: flex;
     list-style: none;
     padding-inline-start: 0;
 }
 
-/* nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 10vh;
-} */
-
-
-
 ul li {
-    margin: 20px;  
+    margin: 20px;
 }
 
-ul a{
+ul a {
     text-decoration: none;
     color: black;
 }
 
-.flex{
+.flex {
     display: flex;
     justify-content: space-around;
-    align-items: center;  
+    align-items: center;
 }
 
-
-.bem-vindo{
+.bem-vindo {
     text-align: center;
     /* margin: 40px; */
-
 }
 
-.bem-vindo span{
+.bem-vindo span {
     font-weight: bold;
 }
 
-
-
-.flex-column{
+.flex-column {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
-      
 }
 
 .user {
@@ -98,24 +84,22 @@ ul a{
     color: black;
 }
 
-.color-link{
+.color-link {
     color: #EF8910;
 }
 
-.desconectar{
+.desconectar {
     text-align: right;
     font-size: small;
 }
 
-
 .bg-orange {
-  background-color: #EF8910;
-  width: 100%;
-  height: 100px;
+    background-color: #EF8910;
+    width: 100%;
+    height: 100px;
 }
 
 .container {
-
     position: relative;
     bottom: 50px;
     width: 75%;
@@ -123,14 +107,13 @@ ul a{
     background-color: rgb(255, 255, 255);
 }
 
-.bg-grey{
-    
+.bg-grey {
     /* background: rgb(255,255,255); */
-    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgb(238, 238, 238) 100%);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgb(238, 238, 238) 100%);
     height: 100vh;
 }
 
-.card{
+.card {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -138,15 +121,14 @@ ul a{
     margin: 10px;
     width: 250px;
     height: 250px;
-
     /* background: rgb(255,255,255); */
-    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(238,238,238) 100%);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(238, 238, 238) 100%);
     border-radius: 20px;
     border: 1px solid rgb(240, 240, 240);
     transition: 300ms ease-in;
 }
 
-.card:hover{
+.card:hover {
     transform: scale(1.1);
     border: 1px solid #ffab45;
     transform: translateY(-5px);
@@ -154,11 +136,11 @@ ul a{
     border-radius: 15px;
 }
 
-
 .icons {
     transition: 300ms ease 100ms;
 }
-.icons:hover{
+
+.icons:hover {
     opacity: 90%;
     transform: translateY(-5px);
 }
@@ -166,23 +148,21 @@ ul a{
 .card img {
     width: 40%;
 }
- 
+
 .card span {
-    
     position: relative;
     top: 45px;
     font-size: 15px;
     font-weight: bold;
-
 }
 
-.flex-column-evenly{
+.flex-column-evenly {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
 
-.bg-black{
+.bg-black {
     background-color: black;
     width: 100%;
     height: 50px;
@@ -192,109 +172,118 @@ footer p {
     color: white;
     font-size: smaller;
     margin: 16px;
-        
 }
 
-.color-orange{
+.color-orange {
     color: #fc8415;
 }
 
-.container-logo{
+.container-logo {
     width: 100px;
 }
 
+.navbar-toggler {
+    transition: 300ms;
+}
+
+.navbar-toggler:focus {
+    border: 2px solid #fc8415 !important;
+    outline: none;
+    box-shadow: none;
+}
+
+.navbar-toggler:active {
+    border: 1px solid #fc8415 !important;
+    outline: none;
+    box-shadow: 1px 2px 5px 1px rgba(253, 184, 46, 0.2);
+}
+
+.navbar-toggler:hover {
+    border: 1px solid #fc8415
+}
+
+
 /* --------------Media Queries--------------------------------- */
 
-@media (max-width: 1200px){
-
-    .flex{
-    
-         
+@media (max-width: 1200px) {
+    .flex {
         /* background-color: #EF8910; */
         /* flex-direction: column; */
         flex-wrap: wrap;
         align-items: center;
-        
     }
- 
-    
-    
     .card {
         width: 200px;
         height: 200px;
         /* margin: 20px; */
     }
-
-    .bem-vindo{
-
+    .bem-vindo {
         margin: 50px;
     }
-    
+    nav {
+        order: 3;
+        margin-bottom: 20px;
+    }
+    ul {
+        margin: 10px;
+    }
+    ul li {
+        display: flex;
+        justify-content: center;
+        /* flex-direction: column; */
+    }
     .card span {
-    
         position: relative;
         top: 30px;
         font-size: 15px;
         font-weight: bold;
         text-align: center;
-    
     }
-
-    .container{
-    width: 85%;
-    height: 600px
+    .container {
+        width: 85%;
+        height: 600px
     }
-
-    .nav-list li{
-
-        margin:5px;
+    .nav-list li {
+        margin: 5px;
     }
-
     .user {
         margin: 10px 15px;
-        
+        padding: 5px;
     }
-
-   
-
-    @media (max-width: 576px){
-
-        .flex{
-    
-         
+    @media (max-width: 576px) {
+        .flex {
             /* background-color: #EF8910; */
             flex-direction: column;
-        
             align-items: center;
-            
         }
-        
-
-        .flex-column{
-            align-items:  center;
+        .logo {
+            visibility: hidden;
         }
-
-        .container{
+        .user {
+            margin: 0;
+            width: 60%;
+        }
+        ul {
+            display: flex;
+            align-items: center;
+            margin: 16px;
+        }
+        .flex-column {
+            align-items: center;
+        }
+        .container {
             width: 85%;
             height: 100%;
-
         }
-        .bem-vindo{
-    
+        .bem-vindo {
             margin: 20px;
         }
-        
         .card {
             width: 150px;
             height: 150px;
-    
         }
-        
         footer p {
             text-align: center;
         }
-    
     }
-
-
 }
